REGRESSION: Web Inspector: Console message repeat count overlapped by icon https://bugs.webkit.org/show_bug.cgi?id=144344
Reviewed by Timothy Hatcher.

* UserInterface/Views/ConsoleMessageView.css:
(.console-message .repeat-count):


Canonical link: https://commits.webkit.org/162506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183668 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ConsoleMessageView.css
@@ -34,7 +34,7 @@
     float: left;
 
     padding: 1px 4px;
-    margin: 0 2px 0 -18px;
+    margin: 0 4px 0 0;
 
     height: 15px;
     background-color: rgb(128, 151, 189);
